force-app/src/objects/cpm__Message__c.object
<CustomObject>
    <description>The message object is used to queue actions such as asynchronous call-outs.</description>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__End_Time__c</fullName>
        <label>End Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Estimated_Execution_Time__c</fullName>
        <label>Estimated Execution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Event_Parameters__c</fullName>
        <label>Event Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Handler__c</fullName>
        <inlineHelpText>The Apex class representing the handler and executing the actual message</inlineHelpText>
        <label>Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Idempotency_Key__c</fullName>
        <externalId>true</externalId>
        <label>Idempotency Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cpm__Inbound_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inbound Report</label>
        <referenceTo>cpm__Inbound_Report__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installment</label>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__NG_Id__c</fullName>
        <externalId>true</externalId>
        <label>NG Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payload__c</fullName>
        <inlineHelpText>Use this field to add, serialised, any payload you want for your handler to pick up.</inlineHelpText>
        <label>Payload</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Intent_Id__c</fullName>
        <externalId>true</externalId>
        <label>Payment Intent Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Schedule</label>
        <referenceTo>cpm__Payment_Schedule__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Start_Time__c</fullName>
        <label>Start Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                    <default>true</default>
                    <label>Outbound</label>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__WebhookURL__c</fullName>
        <label>Webhook Url</label>
        <type>Url</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cpm__Handler__c</columns>
        <columns>cpm__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MES-{0}</displayFormat>
        <label>Message Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>